kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weekly-digest-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weekly-digest
  template:
    metadata:
      labels:
        app: weekly-digest
    spec:
      containers:
      - name: weekly-digest
        image: oydeu/weekly-digest:latest
        ports:
        - containerPort: 3000
