kube/service.yml
kind: Service
apiVersion: v1
metadata:
  name: weekly-digest-service
spec:
  selector:
    app: weekly-digest
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
