kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weekly-digest-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - wd.data-container.net
    secretName: letsencrypt-wd
  rules:
  - host: wd.data-container.net
    http:
      paths:
      - path: /
        backend:
          serviceName: weekly-digest-service
          servicePort: 80
